2003-06-09  Dodji  <dodji@seketeli.org>
	* tests/test4-main.c: updated this test to test the
	new cr_declaration_to_string () api.
	
	* src/parser/cr-declaration.[ch] (cr_declaration_to_string ()):
	Added this new api to allow the serialisation of css declarations.
	This is not well tested yet, but it works.

	* src/parser/cr-parser.c (cr_parser_parse_declaration): 
	fixed a bug that prevented this parsing function to be called outside
	the stylesheet parsing context.

	* src/seleng/cr-style.[ch]: went forward in the font properties 
	gathering.
	
	* src/parser/cr-tknzr.[ch]: fixed some 'const" related compilation
	warnings.
	
	* src/parser/cr-parser.[ch]: exported the declaration parsing api
	so that cr_declaration_parse () can use it.
	
	* src/parser/cr-declaration.[ch]:
	added cr_declaration_parse () api. Not tested yet.
	
	* tests/test7-main.c: updated the test to reflect all the changes
	that happened today.
	
	* src/parser/cr-enc-handler.[ch], src/parser/cr-input.[ch], 
	src/parser/cr-om-parser.[hc], src/parser/cr-parser.[ch].
	Add the 'const' keyword in to function prototypes.

	
	* src/layeng/cr-lay-eng.c: 
	(compute_text_box_inner_edge_size ()) revisied this function to
	make it append the text label to it's container so that
	the size of the text label can be computed. I don't know how
	to do this otherwise. I would have liked this not to happen since
	compute_text_box_inner_edge_size () is part of the layout process
	not the rendering process. Now these two processes are much more
	tied than I would like.
	
	* src/layeng/cr-box.c:
	updated the cr_box_to_string () method to make it serialise
	CRBox->inner_edge.max_width for debug purposes.

	* src/layeng/cr-box-view.c: 
	1/now, the layout code is called
	in the "expose-event" signal callback. Trying to isolate the
	layout from the rendering appears to be too difficult 
	if not impossible.
	
	2/created a cr_box_view_new_from_xml_css_bufs () method to create