@@ -34,6 +34,7 @@ dnl
 GLIB2_VERSION=2.0
 LIBXML2_VERSION=2.4.23
 LIBGNOMEUI_VERSION=2.0.3
+PANGO_VERSION=1.0.4
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -101,6 +102,22 @@ AC_SUBST(CROCO_HAVE_LIBXML2)
 CROCO_PARSER_LIB=libcroco.la
 AC_SUBST(CROCO_PARSER_LIB)
 
+dnl
+dnl check glib-2.0 version
+dnl
+have_pango=no
+PKG_CHECK_MODULES(PANGO, 
+		  [pango >= $PANGO_VERSION],
+		  [have_pango=yes
+	 	  CROCO_HAVE_PANGO=1],
+		  have_pango=no)
+if test "$have_pango" = no ; then
+	AC_MSG_ERROR([*** pango not found. See http://www.pango.org])
+fi
+
+AC_SUBST(PANGO_VERSION)
+AC_SUBST(CROCO_HAVE_PANGO)
+
 dnl --enable-tests
 dnl this option enables compilation of the unit tests built in to .c files
 dnl and also some stuff in the test/ subdir
@@ -131,12 +148,23 @@ AC_ARG_ENABLE(seleng,
 	       WITH_SELENG="no")
 
 if test "$WITH_SELENG" = "auto" ; then
-	if test "$have_libxml2" != no; then
-		CROCO_SELENG_ENABLED=1
+	if test "x$have_libxml2" != "xno" -a "x$have_pango" != "xno" ; then
+		CROCO_SELENG_ENABLED=1			
 		WITH_SELENG="yes"
 	else
 		WITH_SELENG="no"
    	fi
+
+	if test "x$WITH_SELENG" = "yes" ; then
+		if test "x$have_libxml2" != "yes" ; then
+			AC_MSG_ERROR([*** libxml2 is not present, so you cannot have seleng enabled. Go to http://xmlsoft.org to get libxml2 version $LIBXML2_VERSION ***])
+		fi
+
+		if test "x$have_pango" != "yes" ; then
+			AC_MSG_ERROR([*** pango is not present, so you cannot have seleng enabled. Go to http://www.pango.org to get pango version $PANGO_VERSION ***])
+		fi
+	fi
+
 elif test "$WITH_SELENG" = "yes" ; then
 	CROCO_SELENG_ENABLED=1
 else
