@@ -43,7 +43,7 @@ G_BEGIN_DECLS
 enum CRStatus {
         CR_OK,
         CR_BAD_PARAM_ERROR,
-        CR_INSTANCIATION_FAILED,
+        CR_INSTANCIATION_FAILED_ERROR,
         CR_UNKNOWN_TYPE_ERROR,
         CR_UNKNOWN_PROP_ERROR,
         CR_UNKNOWN_PROP_VAL_ERROR,
