@@ -78,7 +78,10 @@ const char * gv_cssbuf=
 " border:1px solid #000;                                     "
 " overflow:auto;                                             "
 " background-color:#eee;                                     "
-" font: 12px verdana;                                        "
+" /*font: 12px verdana;*/                                    "
+" font-zise: 12px;                                           "
+" font-style: font-family ;                                  "
+" font-style: normal;                                        "
 "}                                                           "
 "                                                            "
 "item                                                        "
