@@ -1,3 +1,11 @@
+2003-06-12  dodji  <dodji@seketeli.org>
+
+	* src/seleng/Makefile.am: added pango stuffs.
+	* configure.in: added pango detection.
+	* src/seleng/cr-fonts.c: a bit more font selection.
+	* src/layeng/cr-lay-eng.c: a bit more font selection.
+	* src/seleng/cr-style.c: font selection code again.
+
 2003-06-09  Dodji  <dodji@seketeli.org>
 	* tests/test4-main.c: updated this test to test the
 	new cr_declaration_to_string () api.
